[package]
name = "bbsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.28.0", features = ["fs"] }
pam = "0.8.0"
rand = "0.8.5"
wayland-client = { version = "0.31.2", features = ["log"] }
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
xkbcommon = "0.7.0"
